--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
+      with:
+        go-version: '>=1.18'
     - run: go build -v ./...
     - run: go test -v ./...
     - run: go vet -v ./...
